build: modify poms for aggregate
Modified poms to create aggregate test coverage report